Added some more markup and stubbed out a basic layout.

--- a/roguehacklab/static/index.html
+++ b/roguehacklab/static/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Rogue Hack Lab</title>
+    <link rel="stylesheet" href="styles/base.css" type="text/css" />
   </head>
 
   <body>
-    <h1>Rogue Hack Lab</h1>
+    <div id="header">
+      <h1>Rogue Hack Lab</h1>
+    </div>
+    <div id="navigation">
+      <ul>
+        <li><a href="index.html">home</a></li>
+        <li><a href="members.html">member list</a></li>
+        <li><a href="about.html">about</a></li>
+        <li><a href="join.html">join</a></li>
+        <li><a href="news.html">news</a></li>
+      </ul>
+    </div>
+    <div id="content">
+      Welcome!
+    </div>
   </body>
 </html>
