--- a/roguehacklab/static/members.html
+++ b/roguehacklab/static/members.html
@@ -20,7 +20,7 @@
       </ul>
     </div>
     <div id="content">
-      <p>The following represent people who have taken the step of offering a "digital" handshake to join the hackerspace</p>
+      <p>The following people have taken the step of offering a "digital handshake" to join the hackerspace once we open:</p>
       <ul>
         <li>Emile Snyder</li>
         <li>J. David Lowe</li>
