Just post email to mailman signup.

--- a/roguehacklab/static/index.html
+++ b/roguehacklab/static/index.html
@@ -63,7 +63,7 @@
       
       </br></br>
 Want to know how work toward the hackerspace is progressing? How soon it'll be until you can come hack? Interested in knowing when we might need your help? Sign up and we'll send you emails, intermittently, or at least we plan to . . . 
-      <form action="/cgi-bin/rhl/signup" method="post">
+      <form action="/cgi-bin/mailman/subscribe/announcements" method="post">
         Email me at: <input type="text" name="email" />
         <input type="submit" value="Submit" />
       </form>
