remove empty things, improve readability

--- a/roguehacklab/static/index.html
+++ b/roguehacklab/static/index.html
@@ -13,9 +13,7 @@
     <div id="navigation">
       <ul>
         <li><a href="index.html">home</a></li>
-        <li><a href="about.html">about</a></li>
-        <li><a href="join.html">join</a></li>
-        <li><a href="news.html">news</a></li>
+        <li><a href="/mediawiki/index.php/Main_Page">wiki</a></li>
       </ul>
     </div>
     <div id="content">
@@ -23,7 +21,7 @@
 
       <p>
         Several <a href="http://sog.gy">soggy</a> regulars are in the process of
-        starting a hackerspace in Medford. The Rogue Hack Lab will be a
+        starting a hackerspace in Medford, Oregon. The Rogue Hack Lab will be a
         community-operated, 24-hour space and infrastructure provider for
         technical and creative projects and events. We share a deep, totally
         unfounded suspicion that if we create the space, awesome people will
@@ -64,7 +62,7 @@
         Want to know how work toward the hackerspace is progressing? How soon it'll be until you can come hack? Interested in knowing when we might need your help? Sign up and we'll send you emails, intermittently, or at least we plan to... 
       </p>
       <form action="/cgi-bin/mailman/subscribe/announcements" method="post">
-        Email me at: <input type="text" name="email" />
+        Email me at: <input type="text" name="email" size=80 maxlength=254 />
         <input type="submit" value="Submit" />
       </form>
     </div>
