--- a/roguehacklab/static/index.html
+++ b/roguehacklab/static/index.html
@@ -14,6 +14,7 @@
       <ul>
         <li><a href="index.html">home</a></li>
         <li><a href="/mediawiki/index.php/Main_Page">wiki</a></li>
+        <li><a href="https://github.com/rogue-hack-lab/">github</a></li>
       </ul>
     </div>
     <div id="content">
